--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
                 <li><a href="#">Enlace 3</a></li>
             </ul>
         </section>
+        <section>
+            <h2>Formulario</h2>
+            <form>
+                <div>
+                    <label for="user">Usuario</label>
+                    <input type="text" name="user" placeholder="Fulano">
+                </div>
+                <div>
+                    <lavel for="email">Email</lavel>
+                    <input type="email" name="email" placeholder="fulano@mail.com">
+                </div>
+                <div>
+                    <lavel for="password">Contraseña</lavel>
+                    <input type="password" name="password">
+                </div>
+                <input type="submit">
+            </form>
+        </section>
     </main>
     <footer>
         <span>
